--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>main.java.me.avankziar</groupId>
-	<artifactId>basetemplate</artifactId>
-	<version>1-4-0</version>
-	<name>BaseTemplate</name>
+	<artifactId>luckylottery</artifactId>
+	<version>1-0-0</version>
+	<name>LuckyLottery</name>
 	<url>https://github.com/${repository-owner}/${repository-name}.git</url>
     <scm>
         <url>https://github.com/${repository-owner}/${repository-name}.git</url>
@@ -42,11 +42,6 @@
 				</configuration>
 			</plugin>
 			<plugin>
-   				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.7.0</version>
-			</plugin>
-			<plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
       			<artifactId>maven-shade-plugin</artifactId>
       			<version>3.6.0</version>
@@ -59,12 +54,6 @@
       						</excludes>
       					</filter>
       				</filters>
-        			<relocations>
-	          			<relocation>
-	            			<pattern>dev.dejvokep.boostedyaml</pattern>
-	            			<shadedPattern>main.java.avankziar.ptm.libs</shadedPattern>
-	          			</relocation>
-        			</relocations>
       			</configuration>
       				<executions>
 		        		<execution>
@@ -80,7 +69,7 @@
 			    <artifactId>maven-jar-plugin</artifactId>
 			    <version>2.4</version>
 			    <configuration>
-			      <outputDirectory>F:\Datein\Dev\Dev Server 1.21</outputDirectory>
+			      <outputDirectory>F:\Datein\Dev\Dev Server 1.21.4</outputDirectory>
 			      <finalName>${project.artifactId}-${project.version}</finalName>
 			    </configuration>
 			    <executions>
@@ -122,14 +111,14 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.21-R0.1-SNAPSHOT</version>
+			<version>1.21.4-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Velocity -->
   		<dependency>
         	<groupId>com.velocitypowered</groupId>
         	<artifactId>velocity-api</artifactId>
-        	<version>3.3.0-SNAPSHOT</version>
+        	<version>3.4.0-SNAPSHOT</version>
         	<scope>provided</scope>
 		</dependency>
 		<!-- MysqlConnector -->
@@ -137,23 +126,23 @@
 		    <groupId>com.mysql</groupId>
 		    <artifactId>mysql-connector-j</artifactId>
 		    <version>8.4.0</version>
-		    <!-- Only, if no Plugin has already included it
+		    <!-- Only, if no Plugin has already included it-->
 		    <scope>provided</scope>
-		    -->
 		</dependency>
 		<!-- Minimessage -->
 		<dependency>
 			<groupId>net.kyori</groupId>
 			<artifactId>adventure-platform-bukkit</artifactId>
 			<version>4.3.2</version>
+			<scope>provided</scope>
 		</dependency>
 		<!--  https://repo1.maven.org/maven2/dev/dejvokep/boosted-yaml/ -->
 		<dependency>
  			<groupId>dev.dejvokep</groupId>
   			<artifactId>boosted-yaml</artifactId>
   			<version>1.3.5</version>
-  			<!-- Only, if no Plugin has already included it
-		    <scope>provided</scope>-->
+  			<!-- Only, if no Plugin has already included it-->
+		    <scope>provided</scope>
 		</dependency>
 		<!-- Vault -->
         <dependency>
