--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,10 +1,10 @@
-name: BaseTemplate
-main: main.java.me.avankziar.base.spigot.BM
+name: LuckyLottery
+main: me.avankziar.lly.spigot.LLY
 version: 1
 author: Avankziar
-api-version: 1.17
-description: A Template
+api-version: 1.21
+description: A Lottery Plugin which aims to can display real world lotterys systems.
 depend: [InterfaceHub]
 softdepend: [RootAdministration]
 website: TBA
-prefix: BM
+prefix: LLY
